tests/pass/Throw.java
package pass;

import java.lang.RuntimeException;

public class Throw {
    public static void main(String[] args) {
        throw new RuntimeException();
    }
}
