tests/fail/ThrowFail.java
package pass;

public class ThrowFail {
    public static void main(String[] args) {
        throw new String("FAIL");
    }
}
